[gd_scene load_steps=11 format=3 uid="uid://beqa0xujc2w2f"]

[ext_resource type="PackedScene" uid="uid://chppy7har4fru" path="res://boilerplate/menu/audio_options.tscn" id="1_5bamj"]
[ext_resource type="Theme" uid="uid://dcyvtvwqjqgrh" path="res://boilerplate/ui/theme.tres" id="1_20m18"]
[ext_resource type="Script" path="res://boilerplate/menu/menu.gd" id="1_lwq7m"]
[ext_resource type="Script" path="res://boilerplate/menu/options.gd" id="2_bgxwi"]
[ext_resource type="PackedScene" uid="uid://klpjqkxrnlhd" path="res://boilerplate/menu/video_options.tscn" id="2_cco0b"]
[ext_resource type="PackedScene" uid="uid://daodlw026jsr" path="res://boilerplate/menu/controls_options.tscn" id="3_ecf5s"]

[sub_resource type="Animation" id="Animation_os7k4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../MenuItems:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../MenuItems:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_whd1w"]
resource_name = "hide_submenu"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../MenuItems:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../MenuItems:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_cemkc"]
resource_name = "show_submenu"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../MenuItems:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../MenuItems:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_72tno"]
_data = {
"RESET": SubResource("Animation_os7k4"),
"hide_submenu": SubResource("Animation_whd1w"),
"show_submenu": SubResource("Animation_cemkc")
}

[node name="MenuUI" type="Control"]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("1_20m18")

[node name="MenuItems" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(300, 500)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -4.0
offset_top = -4.0
offset_right = 4.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
script = ExtResource("1_lwq7m")

[node name="Resume" type="Button" parent="MenuItems" groups=["Button"]]
layout_mode = 2
focus_neighbor_top = NodePath("../Exit")
text = "Resume"

[node name="Start" type="Button" parent="MenuItems" groups=["Button"]]
layout_mode = 2
text = "New Game"

[node name="HowToPlay" type="Button" parent="MenuItems" groups=["Button"]]
layout_mode = 2
text = "How To Play"

[node name="Options" type="Button" parent="MenuItems" groups=["Button"]]
layout_mode = 2
text = "Options"

[node name="Credits" type="Button" parent="MenuItems" groups=["Button"]]
layout_mode = 2
text = "Credits"

[node name="Exit" type="Button" parent="MenuItems" groups=["Button"]]
layout_mode = 2
focus_neighbor_bottom = NodePath("../Resume")
text = "Exit"

[node name="SubMenus" type="Control" parent="."]
visible = false
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Options" type="TabContainer" parent="SubMenus" groups=["TabContainer"]]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -251.5
offset_top = -225.0
offset_right = 251.5
offset_bottom = 225.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_bgxwi")

[node name="Audio" parent="SubMenus/Options" instance=ExtResource("1_5bamj")]
layout_mode = 2
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10

[node name="Video" parent="SubMenus/Options" instance=ExtResource("2_cco0b")]
visible = false
layout_mode = 2

[node name="Controls" parent="SubMenus/Options" instance=ExtResource("3_ecf5s")]
visible = false
layout_mode = 2

[node name="Credits" type="GridContainer" parent="SubMenus"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -251.5
offset_top = -225.0
offset_right = 251.5
offset_bottom = 225.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="SubMenus/Credits"]
layout_mode = 2
text = "Stuff:"
horizontal_alignment = 2

[node name="LinkButton" type="LinkButton" parent="SubMenus/Credits" groups=["Button"]]
layout_mode = 2
text = "WigHz"
uri = "https://wighz.itch.io/"

[node name="HowToPlay" type="MarginContainer" parent="SubMenus"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -251.5
offset_top = -225.0
offset_right = 251.5
offset_bottom = 225.0
grow_horizontal = 2
grow_vertical = 2

[node name="RichTextLabel" type="RichTextLabel" parent="SubMenus/HowToPlay"]
layout_mode = 2
bbcode_enabled = true
text = "[center][b]How to play[/b]
Some informative text and images
[/center]"

[node name="BackButton" type="Button" parent="SubMenus" groups=["Button"]]
layout_mode = 0
offset_left = 325.0
offset_top = 574.0
offset_right = 425.0
offset_bottom = 621.0
text = "Back"

[node name="SubMenuAnimator" type="AnimationPlayer" parent="."]
root_node = NodePath("../SubMenus")
libraries = {
"": SubResource("AnimationLibrary_72tno")
}

[connection signal="visibility_changed" from="MenuItems" to="MenuItems" method="_on_visibility_changed"]
[connection signal="pressed" from="MenuItems/Resume" to="MenuItems" method="_on_resume_pressed"]
[connection signal="pressed" from="MenuItems/Start" to="MenuItems" method="_on_start_pressed"]
[connection signal="pressed" from="MenuItems/HowToPlay" to="MenuItems" method="_on_how_to_play_pressed"]
[connection signal="pressed" from="MenuItems/Options" to="MenuItems" method="_on_options_pressed"]
[connection signal="pressed" from="MenuItems/Credits" to="MenuItems" method="_on_credits_pressed"]
[connection signal="pressed" from="MenuItems/Exit" to="MenuItems" method="_on_exit_pressed"]
[connection signal="pressed" from="SubMenus/BackButton" to="MenuItems" method="_on_back_button_pressed"]
